--- a/sandwich-geeks-react/src/styles/cart.css
+++ b/sandwich-geeks-react/src/styles/cart.css
@@ -20,8 +20,9 @@
 .cart-container h1 {
   text-align: center;
   color: #333;
+  text-shadow: 1px 3px 0px rgba(0, 0, 0, 0.2);
   margin-bottom: 30px;
-  font-size: 2.5rem;
+  font-size: 3.5rem;
   font-family: 'Sedgwick Ave', cursive;
 }
 
